kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  dashboarddirag   #nom du service unique (trio)
spec:
  selector:
    app: dashboarddirag # c'est bien le label mis au pod qui est recherché local à un namespace
  ports:
    - protocol: TCP
      port: 3000 # port du service
      targetPort: 3000  # port standard
